# slix-player

./: .gitignore  Cargo.toml  README.md  build.rs  install_desktop_entry.sh  slix-player.desktop
.github/workflows/: release.yml
src/: app.rs  audio.rs  db.rs  main.rs  mpris.rs  scan.rs  state.rs  track_list.rs  utils.rs  waveform.rs
ui/: app.slint  controls.slint  globals.slint  track_list.slint  waveform.slint
